test/2/scope/circular-let.err
scope error: test/2/scope/circular-let.ploy:1:14-15: expected a value; `x` refers to a forward declaration.
  main = { x = x }
               ~
